--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@ body {
   min-height: 100%;
   padding: 0;
   width: 100%;
+  position: relative;
 }
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
